# hulomind

./: .gitignore  .gitmodules  README.md  env.example  pyproject.toml  test_api.py  test_document_processing.py  test_logger.py  test_vectorstore_factory.py
scripts/: init_knowledge_base.py  run_mcp_server.py
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/mcp/: __init__.py  mcp_server.py
src/processors/: __init__.py  document_loader.py  markdown_processor.py
src/services/: __init__.py  knowledge_service.py  llm_service.py
src/utils/: logger.py
src/vectorstore/: __init__.py  base.py  chroma_store.py  factory.py  memory_store.py
tests/: conftest.py  debug_chunking.py  test_chunking.py  test_document_loader.py  test_edge_cases_chunking.py  test_header_based_chunking.py  test_multi_round_search.py  test_rag_qa.py  test_vector_search.py
